--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <spring-boot.version>2.6.13</spring-boot.version>
     </properties>
     <dependencies>
+<!--        [1.5 MyBatis入门]-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -24,6 +25,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
+
 <!--        [1.2 搭建开发环节] Spring Boot核心作用：起步依赖，一个依赖包含一堆包-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
