--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,51 +1,62 @@
 # THYMELEAF (ThymeleafAutoConfiguration)
-# 开启模板缓存（默认值： true ）
-# [4. Spring MVC 入门] 把缓存修改成false,修改模板文件后可以立即看到更新的效果
+# \u5F00\u542F\u6A21\u677F\u7F13\u5B58\uFF08\u9ED8\u8BA4\u503C\uFF1A true \uFF09
+# [4. Spring MVC \u5165\u95E8] \u628A\u7F13\u5B58\u4FEE\u6539\u6210false,\u4FEE\u6539\u6A21\u677F\u6587\u4EF6\u540E\u53EF\u4EE5\u7ACB\u5373\u770B\u5230\u66F4\u65B0\u7684\u6548\u679C
 spring.thymeleaf.cache=false
-# 检查模板是否存在，然后再呈现
+# \u68C0\u67E5\u6A21\u677F\u662F\u5426\u5B58\u5728\uFF0C\u7136\u540E\u518D\u5448\u73B0
 spring.thymeleaf.check-template=true
-# 检查模板位置是否正确（默认值 :true ）
+# \u68C0\u67E5\u6A21\u677F\u4F4D\u7F6E\u662F\u5426\u6B63\u786E\uFF08\u9ED8\u8BA4\u503C :true \uFF09
 spring.thymeleaf.check-template-location=true
-#Content-Type 的值（默认值： text/html ）
+#Content-Type \u7684\u503C\uFF08\u9ED8\u8BA4\u503C\uFF1A text/html \uFF09
 spring.thymeleaf.content-type=text/html
-# 开启 MVC Thymeleaf 视图解析（默认值： true ）
+# \u5F00\u542F MVC Thymeleaf \u89C6\u56FE\u89E3\u6790\uFF08\u9ED8\u8BA4\u503C\uFF1A true \uFF09
 spring.thymeleaf.enabled=true
-# 模板编码
+# \u6A21\u677F\u7F16\u7801
 spring.thymeleaf.encoding=UTF-8
-# 要被排除在解析之外的视图名称列表，⽤逗号分隔
+# \u8981\u88AB\u6392\u9664\u5728\u89E3\u6790\u4E4B\u5916\u7684\u89C6\u56FE\u540D\u79F0\u5217\u8868\uFF0C\u2F64\u9017\u53F7\u5206\u9694
 spring.thymeleaf.excluded-view-names=
-# 要运⽤于模板之上的模板模式。另⻅ StandardTemplate-ModeHandlers( 默认值： HTML5)
+# \u8981\u8FD0\u2F64\u4E8E\u6A21\u677F\u4E4B\u4E0A\u7684\u6A21\u677F\u6A21\u5F0F\u3002\u53E6\u2EC5 StandardTemplate-ModeHandlers( \u9ED8\u8BA4\u503C\uFF1A HTML5)
 spring.thymeleaf.mode=HTML5
-# 在构建 URL 时添加到视图名称前的前缀（默认值： classpath:/templates/ ）
+# \u5728\u6784\u5EFA URL \u65F6\u6DFB\u52A0\u5230\u89C6\u56FE\u540D\u79F0\u524D\u7684\u524D\u7F00\uFF08\u9ED8\u8BA4\u503C\uFF1A classpath:/templates/ \uFF09
 spring.thymeleaf.prefix=classpath:/templates/
-# 在构建 URL 时添加到视图名称后的后缀（默认值： .html ）
+# \u5728\u6784\u5EFA URL \u65F6\u6DFB\u52A0\u5230\u89C6\u56FE\u540D\u79F0\u540E\u7684\u540E\u7F00\uFF08\u9ED8\u8BA4\u503C\uFF1A .html \uFF09
 spring.thymeleaf.suffix=.html
 
-# [1.3 Spring入门]
-# 应用服务 WEB 访问端口
+# [1.3 Spring\u5165\u95E8]
+# \u5E94\u7528\u670D\u52A1 WEB \u8BBF\u95EE\u7AEF\u53E3
 #ServerProperties
 server.port=8080
-# 应用服务 WEB 访问路径
+# \u5E94\u7528\u670D\u52A1 WEB \u8BBF\u95EE\u8DEF\u5F84
 server.servlet.context-path=/community
 
-# [5. Mybatis 入门]
+# [1.5 Mybatis\u5165\u95E8]
 # DataSourceProperties
+# \u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# useSSL\u662F\u5426\u542F\u7528\u5B89\u5168\u8FDE\u63A5
 spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
 spring.datasource.username=root
 spring.datasource.password=19980812
+# \u8FDE\u63A5\u6C60\uFF08\u6570\u636E\u6E90\uFF09\u914D\u7F6E\uFF0C\u7EDF\u4E00\u7BA1\u7406\u8FDE\u63A5\u7684\u5DE5\u5382\uFF0C1.\u7EDF\u4E00\u521D\u59CB\u5316\u8FDE\u63A5\u8FDB\u884C\u590D\u7528\uFF1B2.\u7BA1\u7406\u8FDE\u63A5\u4E0A\u7EBF
+# \u8FDE\u63A5\u6C60\u7C7B\u578B
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+# \u6700\u5927\u8FDE\u63A5\u6570
 spring.datasource.hikari.maximum-pool-size=15
+# \u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5\u6570
 spring.datasource.hikari.minimum-idle=5
+# \u8FDE\u63A5\u7A7A\u95F2\u8D85\u65F6\u5173\u95ED\u65F6\u95F4
 spring.datasource.hikari.idle-timeout=30000
 
-# [5. Mybatis 入门]
+# [1.5 Mybatis\u5165\u95E8]
 # MybatisProperties
+# sql\u6620\u5C04\u6587\u4EF6\u4F4D\u7F6E classpath = target/classes
 mybatis.mapper-locations=classpath:mapper/*.xml
+# \u5F15\u7528\u5B9E\u4F53\u7C7B\u8DEF\u5F84
 mybatis.type-aliases-package=com.nowcoder.community.entity
+# \u542F\u7528\u81EA\u52A8\u751F\u6210\u7EC4\u4EF6\uFF0Cid\u81EA\u589E\u957F
 mybatis.configuration.useGeneratedKeys=true
+# \u4F5C\u7528\u662F\u81EA\u52A8\u5C06\u6570\u636E\u5E93\u4E2D\u7684\u4E0B\u5212\u7EBF\u547D\u540D\uFF08snake_case\uFF09\u6620\u5C04\u4E3A Java \u5BF9\u8C61\u4E2D\u7684\u9A7C\u5CF0\u547D\u540D\uFF08camelCase\uFF09
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
-# [5. Mybatis 入门]
+# [1.5 Mybatis\u5165\u95E8]
 logging.level.com.nowcoder.community=debug
 
