注释优化-1.7 项目调试技巧

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,6 +57,8 @@ mybatis.configuration.useGeneratedKeys=true
 # \u4F5C\u7528\u662F\u81EA\u52A8\u5C06\u6570\u636E\u5E93\u4E2D\u7684\u4E0B\u5212\u7EBF\u547D\u540D\uFF08snake_case\uFF09\u6620\u5C04\u4E3A Java \u5BF9\u8C61\u4E2D\u7684\u9A7C\u5CF0\u547D\u540D\uFF08camelCase\uFF09
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
-# [1.5 Mybatis\u5165\u95E8]
-logging.level.com.nowcoder.community=debug
+# [1.5 Mybatis\u5165\u95E8]\[1.7  \u9879\u76EE\u8C03\u8BD5\u6280\u5DE7]
+# Logger
+#logging.level.com.nowcoder.community=debug
+#logging.file.name=d:/nowcoder/logs/community.log
 
