--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,8 +57,26 @@ mybatis.configuration.useGeneratedKeys=true
 # \u4F5C\u7528\u662F\u81EA\u52A8\u5C06\u6570\u636E\u5E93\u4E2D\u7684\u4E0B\u5212\u7EBF\u547D\u540D\uFF08snake_case\uFF09\u6620\u5C04\u4E3A Java \u5BF9\u8C61\u4E2D\u7684\u9A7C\u5CF0\u547D\u540D\uFF08camelCase\uFF09
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
-# [1.5 Mybatis\u5165\u95E8]\[1.7  \u9879\u76EE\u8C03\u8BD5\u6280\u5DE7]
 # Logger
+#[1.5 Mybatis\u5165\u95E8]
 #logging.level.com.nowcoder.community=debug
+#[1.7  \u9879\u76EE\u8C03\u8BD5\u6280\u5DE7]
 #logging.file.name=d:/nowcoder/logs/community.log
+# [2.1 \u53D1\u9001\u90AE\u4EF6]debug jasypt\u7684\u95EE\u9898
+#logging.level.com.github.ulisesbocchio.jasyptspringboot=DEBUG
 
+# [2.1 \u53D1\u9001\u90AE\u4EF6]
+# MailProperties
+# \u90AE\u7BB1\u57DF\u540D
+spring.mail.host=smtp.sina.com
+spring.mail.port=465
+spring.mail.username=yxj1saac@sina.com
+spring.mail.password=c6dfd6af4066be1f
+# //todo\uFF08\u62D3\u5C55\uFF09\u542F\u7528Jasypt\u52A0\u5BC6\u76EE\u524D\u5931\u8D25
+#spring.mail.password=ENC(C5R7XLLJvh1r6oBE3kqDzaX1foZ1v7y508KNgc+oEOU=)
+spring.mail.protocol=smtps
+#\u53D1\u9001\u90AE\u4EF6\u65F6\u4F7F\u7528ssl\u5B89\u5168\u8FDE\u63A5
+spring.mail.properties.mail.smtp.ssl.enable=true
+# Jasypt\u914D\u7F6E
+jasypt.encryptor.password=yxj
+jasypt.encryptor.algorithm=PBEWithMD5AndDES
