--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,8 +62,8 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #logging.level.com.nowcoder.community=debug
 #[1.7  \u9879\u76EE\u8C03\u8BD5\u6280\u5DE7]
 #logging.file.name=d:/nowcoder/logs/community.log
-# [2.1 \u53D1\u9001\u90AE\u4EF6]debug jasypt\u7684\u95EE\u9898
-#logging.level.com.github.ulisesbocchio.jasyptspringboot=DEBUG
+# [2.1 \u53D1\u9001\u90AE\u4EF6]debug jasypt\u7684\u95EE\u9898->\u5173\u95ED\u65E5\u5FD7
+logging.level.com.ulisesbocchio.jasyptspringboot=OFF
 
 # [2.1 \u53D1\u9001\u90AE\u4EF6]
 # MailProperties
@@ -78,5 +78,11 @@ spring.mail.protocol=smtps
 #\u53D1\u9001\u90AE\u4EF6\u65F6\u4F7F\u7528ssl\u5B89\u5168\u8FDE\u63A5
 spring.mail.properties.mail.smtp.ssl.enable=true
 # Jasypt\u914D\u7F6E
-jasypt.encryptor.password=yxj
-jasypt.encryptor.algorithm=PBEWithMD5AndDES
+#jasypt.encryptor.password=yxj
+#jasypt.encryptor.algorithm=PBEWithMD5AndDES
+
+# [2.2 \u5F00\u53D1\u6CE8\u518C\u529F\u80FD]
+# community
+# \u6CE8\u518C\u90AE\u4EF6\u6FC0\u6D3B\u94FE\u63A5
+community.path.domain=http://localhost:8080
+
