代码开发-2.4 生成验证码 - kaptcha包使用 - 验证码码刷新按钮配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,8 @@ spring.thymeleaf.suffix=.html
 # \u5E94\u7528\u670D\u52A1 WEB \u8BBF\u95EE\u7AEF\u53E3
 #ServerProperties
 server.port=8080
-# \u5E94\u7528\u670D\u52A1 WEB \u8BBF\u95EE\u8DEF\u5F84
+# \u5E94\u7528\u670D\u52A1 WEB \u8BBF\u95EE\u8DEF\u5F84 1.\u907F\u514D URL \u51B2\u7A81 2.\u4FBF\u4E8E\u7BA1\u7406 API \u8DEF\u5F84 3.\u66F4\u8D34\u8FD1\u771F\u5B9E\u751F\u4EA7\u73AF\u5883
+#  @{} \u662F Thymeleaf \u7684 URL \u8868\u8FBE\u5F0F\u8BED\u6CD5\u3002\u5B83\u4F1A\u81EA\u52A8\u4F7F\u7528 Spring \u7684\u4E0A\u4E0B\u6587\u8DEF\u5F84server.servlet.context-path\u8FDB\u884C\u62FC\u63A5
 server.servlet.context-path=/community
 
 # [1.5 Mybatis\u5165\u95E8]
