--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
         <spring-boot.version>2.6.13</spring-boot.version>
     </properties>
     <dependencies>
+<!--        [2.4 生成验证码] kaptcha-->
+        <dependency>
+            <groupId>com.github.penggle</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3.2</version>
+        </dependency>
 <!--        [2.2 开发注册功能]-提交注册数据 jar包提供判断字符串，集合等常用数据空值的情况-->
         <dependency>
             <groupId>org.apache.commons</groupId>
